// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomiseLease /> renders correctly 1`] = `
<div
  className="pdp--sidebar"
  data-uitestid="details-page_customise-lease-container_sidebar"
>
  <h2
    className="heading -black -xlarge"
  >
    Customise Your Lease
  </h2>
  <button
    className="button -fullwidth -white-teal -regular -solid"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "null",
      }
    }
  >
    <div
      className="button--inner"
    >
      <i
        className="icon color-picker"
      >
        <svg
          height="23.997"
          viewBox="0 0 23.996 23.997"
          width="23.996"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(0 4.964)"
          >
            <g
              fill="#ff9801"
              transform="translate(-2.785 -2.909)"
            >
              <path
                d="M 19.7554874420166 18.67436599731445 L 16.5920352935791 15.51092338562012 C 17.41275787353516 14.60961818695068 17.88575553894043 13.46771812438965 17.94278717041016 12.2500057220459 L 22.41652870178223 12.2500057220459 C 22.38627815246582 13.44181728363037 22.13953590393066 14.60423946380615 21.68192863464355 15.70900630950928 C 21.22431945800781 16.81375312805176 20.57683563232422 17.81020164489746 19.7554874420166 18.67436599731445 Z"
                stroke="none"
              />
              <path
                d="M 18.17623901367188 12.5000057220459 C 18.07655906677246 13.60744476318359 17.64648056030273 14.64573669433594 16.93388557434082 15.49923229217529 L 19.74848937988281 18.31382942199707 C 20.46638679504395 17.51657867431641 21.03804779052734 16.61018180847168 21.45095825195312 15.61333656311035 C 21.86386680603027 14.61648178100586 22.10055351257324 13.57135581970215 22.15664863586426 12.5000057220459 L 18.17623901367188 12.5000057220459 M 17.69862747192383 12.0000057220459 L 22.66969871520996 12.0000057220459 C 22.66969871520996 14.63681602478027 21.62220764160156 17.16560745239258 19.75772857666016 19.03016662597656 L 16.24259757995605 15.51504611968994 C 17.17492866516113 14.58280563354492 17.69862747192383 13.31840705871582 17.69862747192383 12.0000057220459 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#ffdf00"
              transform="translate(-2.058 -3.636)"
            >
              <path
                d="M 12.2500057220459 22.41652870178223 L 12.2500057220459 17.94278717041016 C 13.46771812438965 17.88575553894043 14.60961818695068 17.41275787353516 15.51092338562012 16.5920352935791 L 18.67436599731445 19.7554874420166 C 17.81020164489746 20.57683563232422 16.81375312805176 21.22431945800781 15.70900630950928 21.68192863464355 C 14.60423946380615 22.13953590393066 13.44181728363037 22.38627815246582 12.2500057220459 22.41652870178223 Z"
                stroke="none"
              />
              <path
                d="M 12.5000057220459 22.15664863586426 C 13.57135581970215 22.10055351257324 14.61648178100586 21.86386680603027 15.61333656311035 21.45095825195312 C 16.61018180847168 21.03804779052734 17.51657867431641 20.46638679504395 18.31382942199707 19.74848937988281 L 15.49923229217529 16.93388557434082 C 14.64573669433594 17.64648056030273 13.60744476318359 18.07655906677246 12.5000057220459 18.17623901367188 L 12.5000057220459 22.15664863586426 M 12.0000057220459 22.66969871520996 L 12.0000057220459 17.69862747192383 C 13.3184061050415 17.69862747192383 14.58280658721924 17.17492866516113 15.51504611968994 16.24259757995605 L 19.03016662597656 19.75772857666016 C 17.16560554504395 21.62220764160156 14.63681602478027 22.66969871520996 12.0000057220459 22.66969871520996 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#4ea917"
              transform="translate(-0.603 -3.636)"
            >
              <path
                d="M 10.29487705230713 22.41652870178223 C 9.103063583374023 22.38627815246582 7.94062328338623 22.13953590393066 6.835856914520264 21.68192863464355 C 5.731100082397461 21.22431945800781 4.734660625457764 20.57683753967285 3.870513916015625 19.75548934936523 L 7.033926963806152 16.59203147888184 C 7.935241222381592 17.41275405883789 9.077162742614746 17.88575553894043 10.29487705230713 17.94278717041016 L 10.29487705230713 22.41652870178223 Z"
                stroke="none"
              />
              <path
                d="M 10.04487705230713 22.15664863586426 L 10.04487705230713 18.17623901367188 C 8.937437057495117 18.07655906677246 7.899137496948242 17.64648246765137 7.045622825622559 16.93388748168945 L 4.231053829193115 19.74849700927734 C 5.028289318084717 20.46639442443848 5.934672355651855 21.03804779052734 6.931527137756348 21.45095825195312 C 7.928390502929688 21.86386680603027 8.973520278930664 22.10055351257324 10.04487705230713 22.15664863586426 M 10.54487705230713 22.66969871520996 C 7.90805721282959 22.66969871520996 5.379237174987793 21.62220764160156 3.514717102050781 19.75772857666016 L 7.029797077178955 16.24259757995605 C 7.962057113647461 17.17492866516113 9.226467132568359 17.69862747192383 10.54487705230713 17.69862747192383 L 10.54487705230713 22.66969871520996 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#02a9f4"
              transform="translate(0 -2.909)"
            >
              <path
                d="M 2.914219617843628 18.67436599731445 C 2.092861890792847 17.81020355224609 1.44537091255188 16.81376266479492 0.98777174949646 15.70900630950928 C 0.5301631689071655 14.60424900054932 0.2834211885929108 13.44181823730469 0.2531709969043732 12.2500057220459 L 4.726912498474121 12.2500057220459 C 4.783943653106689 13.46767997741699 5.256937503814697 14.60957813262939 6.077636241912842 15.51091384887695 L 2.914219617843628 18.67436599731445 Z"
                stroke="none"
              />
              <path
                d="M 2.921210765838623 18.31382369995117 L 5.735783576965332 15.49921798706055 C 5.023209095001221 14.64569473266602 4.593138217926025 13.60741329193115 4.493462562561035 12.5000057220459 L 0.5130509734153748 12.5000057220459 C 0.5691462755203247 13.57136249542236 0.8058321475982666 14.61649036407471 1.218741774559021 15.61333656311035 C 1.631651282310486 16.61018180847168 2.203306913375854 17.51657295227051 2.921210765838623 18.31382369995117 M 2.911981821060181 19.03016662597656 C 1.047471761703491 17.16560554504395 1.732559212541673e-06 14.63681602478027 1.732559212541673e-06 12.0000057220459 L 4.971071720123291 12.0000057220459 C 4.971071720123291 13.3184061050415 5.49480152130127 14.58280658721924 6.427061557769775 15.51504611968994 L 2.911981821060181 19.03016662597656 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#9d27b0"
              transform="translate(0 -1.453)"
            >
              <path
                d="M 4.726912498474121 10.29487705230713 L 0.2531709372997284 10.29487705230713 C 0.283421128988266 9.103055953979492 0.5301631689071655 7.940614223480225 0.98777174949646 6.835856914520264 C 1.445380210876465 5.731090545654297 2.092866182327271 4.734655380249023 2.914222717285156 3.870518207550049 L 6.077632427215576 7.033927917480469 C 5.256941318511963 7.935280799865723 4.783943653106689 9.077201843261719 4.726912498474121 10.29487705230713 Z"
                stroke="none"
              />
              <path
                d="M 4.493462085723877 10.04487705230713 C 4.593138217926025 8.937466621398926 5.023218154907227 7.899160385131836 5.735792636871338 7.045628070831299 L 2.921210527420044 4.231046199798584 C 2.203313112258911 5.028281688690186 1.631651282310486 5.934672355651855 1.218741774559021 6.931527137756348 C 0.8058321475982666 7.92838191986084 0.5691462159156799 8.973518371582031 0.5130509734153748 10.04487705230713 L 4.493462085723877 10.04487705230713 M 4.971071720123291 10.54487705230713 L 1.732559212541673e-06 10.54487705230713 C 1.732559212541673e-06 7.90805721282959 1.047471761703491 5.379237174987793 2.911981821060181 3.514717102050781 L 6.427061557769775 7.029797077178955 C 5.49480152130127 7.962057113647461 4.971071720123291 9.226467132568359 4.971071720123291 10.54487705230713 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#f43561"
              transform="translate(-0.603 -0.851)"
            >
              <path
                d="M 7.033927917480469 6.077632427215576 L 3.870517253875732 2.914222002029419 C 4.734647750854492 2.092865467071533 5.731090068817139 1.445380210876465 6.835846900939941 0.98777174949646 C 7.940613269805908 0.5301631689071655 9.103055953979492 0.283421128988266 10.29487705230713 0.2531709372997284 L 10.29487705230713 4.726912498474121 C 9.077201843261719 4.783943653106689 7.935280799865723 5.256941318511963 7.033927917480469 6.077632427215576 Z"
                stroke="none"
              />
              <path
                d="M 10.04487705230713 0.5130505561828613 C 8.973512649536133 0.5691461563110352 7.928371906280518 0.8058323860168457 6.931517124176025 1.218741893768311 C 5.934662818908691 1.631651401519775 5.028279304504395 2.203312873840332 4.231045722961426 2.921210527420044 L 7.045628070831299 5.735792636871338 C 7.899160385131836 5.023218154907227 8.937466621398926 4.593138217926025 10.04487705230713 4.493462562561035 L 10.04487705230713 0.5130505561828613 M 10.54487705230713 1.9073486328125e-06 L 10.54487705230713 4.971071720123291 C 9.226467132568359 4.971071720123291 7.962057113647461 5.49480152130127 7.029797077178955 6.427061557769775 L 3.514717102050781 2.911981821060181 C 5.379226684570312 1.047481536865234 7.908047199249268 1.9073486328125e-06 10.54487705230713 1.9073486328125e-06 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <path
              className="picker"
              d="M28.492,8.854h0a2.469,2.469,0,0,0-3.49,0L23.156,10.7l-.48-.487a.677.677,0,0,0-.96.954l1.069,1.069L14.56,20.46v2.326h2.326l8.224-8.231,1.069,1.069a.677.677,0,1,0,.954-.96l-.487-.48,1.846-1.846a2.469,2.469,0,0,0,0-3.483Z"
              fill="#658098"
              transform="translate(-5.215 -13.096)"
            />
          </g>
        </svg>
      </i>
      Select Colour & Trim
    </div>
  </button>
  <span
    className="heading -black -regular"
  >
    Is this for you, or for your business?
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Personal"
      disabled={false}
      id="Personal"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Personal"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Personal"
      htmlFor="Personal"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Personal"
      >
        Personal
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Business"
      disabled={false}
      id="Business"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Business"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Business"
      htmlFor="Business"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Business"
      >
        Business
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How many miles will you be driving a year?
    <br />
    <span
      className="text -b -regular -orange"
    >
      8000
       Miles
    </span>
  </span>
  <label
    className="sliding-input"
    data-uitestid="details-page_sliding-input_mileage-slider"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "--length": 3,
        "--value": 1,
      }
    }
  >
    <input
      className="sliding-input-control visually-hidden"
      disabled={false}
      max={3}
      min={1}
      onChange={[Function]}
      step={1}
      type="range"
      value={1}
    />
    <div
      className="sliding-input-fill"
    >
      <div
        className="sliding-input-value"
      />
    </div>
    <div
      className="sliding-input-handle"
    />
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_6K"
    >
      6K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_8K"
    >
      8K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_10K"
    >
      10K
    </div>
  </label>
  <span
    className="heading -black -regular"
  >
    How long do you want your vehicle for?
    <br />
    <span
      className="text -b -regular -orange"
    >
      24 Months - 2 Years
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-24, 36"
      disabled={false}
      id="24, 36"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="24, 36"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_24, 36"
      htmlFor="24, 36"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_24, 36"
      >
        24, 36
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-77"
      disabled={false}
      id="77"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="77"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_77"
      htmlFor="77"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_77"
      >
        77
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How much do you want to pay upfront?
    <i
      className="icon md hydrated -ml-100 -info-modal -teal"
      onClick={[Function]}
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256,56C145.72,56,56,145.72,56,256s89.72,200,200,200,200-89.72,200-200S366.28,56,256,56Zm0,82a26,26,0,1,1-26,26A26,26,0,0,1,256,138Zm48,226H216a16,16,0,0,1,0-32h28V244H228a16,16,0,0,1,0-32h32a16,16,0,0,1,16,16V332h28a16,16,0,0,1,0,32Z"
        />
      </svg>
    </i>
    <br />
    <span
      className="text -b -regular -orange"
    >
      1 Months - £605.95 inc. VAT
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={true}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-1"
      disabled={false}
      id="1"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="1"
    />
    <label
      className="choice-box -active"
      data-uitestid="details-page_choice-boxes-v2_choice-box_1"
      htmlFor="1"
      style={
        Object {
          "backgroundColor": "null",
        }
      }
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_1"
      >
        1
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-3"
      disabled={false}
      id="3"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="3"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_3"
      htmlFor="3"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_3"
      >
        3
      </span>
    </label>
  </div>
  <span
    className="heading -flex-h -black -regular"
  >
    Vehicle Options
    <span
      className="text -b -regular -orange"
    >
      14-21 Day Delivery
    </span>
  </span>
  <div
    className="custom-select-container -fullwidth"
    data-testid="colour-selector"
    data-uitestid="details-page_custom-lease-select_colour"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Paint Colour:
      </div>
      Solid - Polar white
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <div
    className="custom-select-container -fullwidth"
    data-testid="trim-selector"
    data-uitestid="details-page_custom-lease-select_trim"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Interior:
      </div>
      
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <span
    className="heading -black -regular"
  >
    Add Vanarama Service Plan (Our Maintenance Package):
    <span
      className="text -b -ml-100 -regular -orange"
    >
      £61.75 Per Month inc. VAT
    </span>
  </span>
  <a
    className="link -primary -small -plain"
    data-uitestid="details-page_customise-lease_what-included"
    onClick={[Function]}
  >
    See What's Included
  </a>
  <div
    className="formgroup"
  >
    <div
      className="formgroup--content"
    >
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={false}
          disabled={false}
          id="maintenanceCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="maintenanceCost"
        >
          <span
            className="text -regular -darker"
          >
            YES, I want peace of mind and to keep things hassle-free
          </span>
        </label>
      </div>
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={true}
          disabled={false}
          id="leaseCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="leaseCost"
        >
          <span
            className="text -regular -darker"
          >
            NO, I want to worry about sorting the maintenance costs myself
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="button-wrapper"
  >
    <button
      className="button -reset -teal -regular -clear"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -teal"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M320,146s24.36-12-64-12A160,160,0,1,0,416,294"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="256 58 336 138 256 218"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
          </svg>
        </i>
        Reset Best Price
      </div>
    </button>
  </div>
  <div
    className="pdp--order-summary"
  >
    <p
      className="heading -inherit -primary -small"
    >
      ORDER SUMMARY
    </p>
    <section
      className="structured-list -compact"
    >
      <div
        className="structured-list-tbody"
      >
        <div
          className="structured-list-row orange"
          data-abtestid="product-page_structured-list_processing-fee"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-abtestid="product-page_structured-list_processing-fee-label"
            data-testid="data_id-0-Processing Fee:"
            data-uitestid="details-page_order-summary_Processing Fee:"
          >
            Processing Fee:
          </div>
          <div
            className="structured-list-td"
            data-abtestid="product-page_structured-list_processing-fee-value"
            data-testid="processingFee"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-1-Initial Payment:"
            data-uitestid="details-page_order-summary_Initial Payment:"
          >
            Initial Payment:
          </div>
          <div
            className="structured-list-td"
            data-testid="initialPayment"
          >
            £605.95 (inc. VAT)
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-2-Contract Length:"
            data-uitestid="details-page_order-summary_Contract Length:"
          >
            Contract Length:
          </div>
          <div
            className="structured-list-td"
            data-testid="contractLengthile"
          >
            24 months
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-3-Annual Mileage:"
            data-uitestid="details-page_order-summary_Annual Mileage:"
          >
            Annual Mileage:
          </div>
          <div
            className="structured-list-td"
            data-testid="annualMileage"
          >
            8000 miles
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-4-Vanarama Service Plan:"
            data-uitestid="details-page_order-summary_Vanarama Service Plan:"
          >
            Vanarama Service Plan:
          </div>
          <div
            className="structured-list-td"
            data-testid="maintenance"
          >
            No
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-5-Colour:"
            data-uitestid="details-page_order-summary_Colour:"
          >
            Colour:
          </div>
          <div
            className="structured-list-td"
            data-testid="colour"
          >
            Solid - Polar white
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-7-Stock:"
            data-uitestid="details-page_order-summary_Stock:"
          >
            Stock:
          </div>
          <div
            className="structured-list-td"
            data-testid="stock"
          >
            14-21 Day Delivery
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-8-Warranty:"
            data-uitestid="details-page_order-summary_Warranty:"
          >
            Warranty:
          </div>
          <div
            className="structured-list-td"
            data-testid="warranty"
          >
            undefined Years Manufacturer And undefined Miles
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-9-Road Tax:"
            data-uitestid="details-page_order-summary_Road Tax:"
          >
            Road Tax:
          </div>
          <div
            className="structured-list-td"
            data-testid="roadTax"
          >
            INCLUDED
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-10-Redundancy & Life Event Cover:"
            data-uitestid="details-page_order-summary_Redundancy & Life Event Cover:"
          >
            Redundancy & Life Event Cover:
          </div>
          <div
            className="structured-list-td"
            data-testid="lifeEventCover"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-11-Delivery:"
            data-uitestid="details-page_order-summary_Delivery:"
          >
            Delivery:
          </div>
          <div
            className="structured-list-td"
            data-testid="delivery"
          >
            FREE
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="lease-scanner--sticky-wrap start-screen"
    style={
      Object {
        "opacity": "1",
      }
    }
  >
    <div
      className="lease-scanner"
      style={
        Object {
          "--lease-scanner-height": "6.75rem",
        }
      }
    >
      <div
        className="content-wrapper"
      >
        <div
          className="price -xlarge -black"
        >
          <div
            className="price--inner"
            data-uitestid="details-page_price_price-inner"
          >
            <span
              className="price--sub"
            >
              £
            </span>
            <span
              className="price--pounds"
            >
              POA
            </span>
          </div>
        </div>
        <div
          className="heading headingText -pt-100 -darker -small"
          data-uitestid="details-page_button_PM inc. VAT"
        >
          PM inc. VAT
        </div>
      </div>
      <div
        className="button-wrapper"
      >
        <button
          className="button -fullwidth -teal -regular -solid"
          data-uitestid="details-page_button_order-now"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "null",
            }
          }
        >
          <div
            className="button--inner"
          >
            Order Now
          </div>
        </button>
        <div
          className="-eta"
        >
          <i
            className="icon -orange -small"
          >
            <svg
              height="1em"
              viewBox="0 0 17.02 15.75"
              width="1em"
            >
              <path
                d="M14.68,4.26c-1.1-1.11-2.57-1.78-4.13-1.89V1.32h0.78c0.26,0,0.48-0.22,0.48-0.48 c0-0.26-0.21-0.48-0.48-0.48H8.81c-0.26,0-0.48,0.22-0.48,0.48c0,0.26,0.21,0.48,0.48,0.48h0.78v1.05 C8.3,2.46,7.07,2.94,6.06,3.74C5.73,4,5.42,4.28,5.15,4.6C4.98,4.8,5.01,5.11,5.22,5.27c0.2,0.16,0.49,0.14,0.66-0.05 c0.23-0.27,0.49-0.52,0.78-0.74c0.97-0.77,2.18-1.19,3.42-1.18c3.07,0,5.56,2.49,5.56,5.56c0,3.07-2.49,5.56-5.56,5.56 c-2.26,0-4.29-1.37-5.14-3.45c-0.1-0.24-0.38-0.36-0.62-0.26s-0.36,0.38-0.26,0.62c1.36,3.33,5.17,4.93,8.5,3.56 c3.33-1.36,4.93-5.17,3.56-8.5C15.77,5.6,15.29,4.87,14.68,4.26L14.68,4.26z"
              />
              <path
                d="M6.98,6.07c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H0.89c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,6.55,6.98,6.33,6.98,6.07L6.98,6.07z"
              />
              <path
                d="M6.98,8.02c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H1.65c-0.26,0-0.48,0.21-0.48,0.48 c0,0.26,0.21,0.48,0.48,0.48H6.5C6.76,8.5,6.98,8.28,6.98,8.02L6.98,8.02z"
              />
              <path
                d="M6.98,9.97c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H2.59c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,10.45,6.98,10.24,6.98,9.97L6.98,9.97z"
              />
              <path
                d="M13.47,6.86c0.22-0.2,0.24-0.54,0.05-0.76s-0.54-0.24-0.76-0.05c-0.01,0.01-0.02,0.02-0.03,0.02 L9.82,8.81l-0.86-0.9C8.75,7.7,8.41,7.7,8.2,7.91c-0.21,0.2-0.21,0.54-0.01,0.75l1.6,1.67L13.47,6.86z"
              />
            </svg>
          </i>
          <span
            className="text -small -orange"
          >
            In Under 3 Minutes
          </span>
        </div>
      </div>
      <div />
      <div
        style={
          Object {
            "height": "1rem",
          }
        }
      >
        <div
          className="text -small -darker"
        >
          <a
            className="link InfinityNumber clickable -primary -small -plain"
            href="tel:+441442838195"
          >
            Call 01442 838 195
          </a>
           
          |
           
          <a
            className="link -primary -small -plain"
            onClick={[Function]}
          >
            Request a Call Back
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomiseLease /> renders correctly 2`] = `
<div
  className="pdp--sidebar"
  data-uitestid="details-page_customise-lease-container_sidebar"
>
  <h2
    className="heading -black -xlarge"
  >
    Customise Your Lease
  </h2>
  <button
    className="button -fullwidth -white-teal -regular -solid"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "null",
      }
    }
  >
    <div
      className="button--inner"
    >
      <i
        className="icon color-picker"
      >
        <svg
          height="23.997"
          viewBox="0 0 23.996 23.997"
          width="23.996"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            transform="translate(0 4.964)"
          >
            <g
              fill="#ff9801"
              transform="translate(-2.785 -2.909)"
            >
              <path
                d="M 19.7554874420166 18.67436599731445 L 16.5920352935791 15.51092338562012 C 17.41275787353516 14.60961818695068 17.88575553894043 13.46771812438965 17.94278717041016 12.2500057220459 L 22.41652870178223 12.2500057220459 C 22.38627815246582 13.44181728363037 22.13953590393066 14.60423946380615 21.68192863464355 15.70900630950928 C 21.22431945800781 16.81375312805176 20.57683563232422 17.81020164489746 19.7554874420166 18.67436599731445 Z"
                stroke="none"
              />
              <path
                d="M 18.17623901367188 12.5000057220459 C 18.07655906677246 13.60744476318359 17.64648056030273 14.64573669433594 16.93388557434082 15.49923229217529 L 19.74848937988281 18.31382942199707 C 20.46638679504395 17.51657867431641 21.03804779052734 16.61018180847168 21.45095825195312 15.61333656311035 C 21.86386680603027 14.61648178100586 22.10055351257324 13.57135581970215 22.15664863586426 12.5000057220459 L 18.17623901367188 12.5000057220459 M 17.69862747192383 12.0000057220459 L 22.66969871520996 12.0000057220459 C 22.66969871520996 14.63681602478027 21.62220764160156 17.16560745239258 19.75772857666016 19.03016662597656 L 16.24259757995605 15.51504611968994 C 17.17492866516113 14.58280563354492 17.69862747192383 13.31840705871582 17.69862747192383 12.0000057220459 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#ffdf00"
              transform="translate(-2.058 -3.636)"
            >
              <path
                d="M 12.2500057220459 22.41652870178223 L 12.2500057220459 17.94278717041016 C 13.46771812438965 17.88575553894043 14.60961818695068 17.41275787353516 15.51092338562012 16.5920352935791 L 18.67436599731445 19.7554874420166 C 17.81020164489746 20.57683563232422 16.81375312805176 21.22431945800781 15.70900630950928 21.68192863464355 C 14.60423946380615 22.13953590393066 13.44181728363037 22.38627815246582 12.2500057220459 22.41652870178223 Z"
                stroke="none"
              />
              <path
                d="M 12.5000057220459 22.15664863586426 C 13.57135581970215 22.10055351257324 14.61648178100586 21.86386680603027 15.61333656311035 21.45095825195312 C 16.61018180847168 21.03804779052734 17.51657867431641 20.46638679504395 18.31382942199707 19.74848937988281 L 15.49923229217529 16.93388557434082 C 14.64573669433594 17.64648056030273 13.60744476318359 18.07655906677246 12.5000057220459 18.17623901367188 L 12.5000057220459 22.15664863586426 M 12.0000057220459 22.66969871520996 L 12.0000057220459 17.69862747192383 C 13.3184061050415 17.69862747192383 14.58280658721924 17.17492866516113 15.51504611968994 16.24259757995605 L 19.03016662597656 19.75772857666016 C 17.16560554504395 21.62220764160156 14.63681602478027 22.66969871520996 12.0000057220459 22.66969871520996 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#4ea917"
              transform="translate(-0.603 -3.636)"
            >
              <path
                d="M 10.29487705230713 22.41652870178223 C 9.103063583374023 22.38627815246582 7.94062328338623 22.13953590393066 6.835856914520264 21.68192863464355 C 5.731100082397461 21.22431945800781 4.734660625457764 20.57683753967285 3.870513916015625 19.75548934936523 L 7.033926963806152 16.59203147888184 C 7.935241222381592 17.41275405883789 9.077162742614746 17.88575553894043 10.29487705230713 17.94278717041016 L 10.29487705230713 22.41652870178223 Z"
                stroke="none"
              />
              <path
                d="M 10.04487705230713 22.15664863586426 L 10.04487705230713 18.17623901367188 C 8.937437057495117 18.07655906677246 7.899137496948242 17.64648246765137 7.045622825622559 16.93388748168945 L 4.231053829193115 19.74849700927734 C 5.028289318084717 20.46639442443848 5.934672355651855 21.03804779052734 6.931527137756348 21.45095825195312 C 7.928390502929688 21.86386680603027 8.973520278930664 22.10055351257324 10.04487705230713 22.15664863586426 M 10.54487705230713 22.66969871520996 C 7.90805721282959 22.66969871520996 5.379237174987793 21.62220764160156 3.514717102050781 19.75772857666016 L 7.029797077178955 16.24259757995605 C 7.962057113647461 17.17492866516113 9.226467132568359 17.69862747192383 10.54487705230713 17.69862747192383 L 10.54487705230713 22.66969871520996 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#02a9f4"
              transform="translate(0 -2.909)"
            >
              <path
                d="M 2.914219617843628 18.67436599731445 C 2.092861890792847 17.81020355224609 1.44537091255188 16.81376266479492 0.98777174949646 15.70900630950928 C 0.5301631689071655 14.60424900054932 0.2834211885929108 13.44181823730469 0.2531709969043732 12.2500057220459 L 4.726912498474121 12.2500057220459 C 4.783943653106689 13.46767997741699 5.256937503814697 14.60957813262939 6.077636241912842 15.51091384887695 L 2.914219617843628 18.67436599731445 Z"
                stroke="none"
              />
              <path
                d="M 2.921210765838623 18.31382369995117 L 5.735783576965332 15.49921798706055 C 5.023209095001221 14.64569473266602 4.593138217926025 13.60741329193115 4.493462562561035 12.5000057220459 L 0.5130509734153748 12.5000057220459 C 0.5691462755203247 13.57136249542236 0.8058321475982666 14.61649036407471 1.218741774559021 15.61333656311035 C 1.631651282310486 16.61018180847168 2.203306913375854 17.51657295227051 2.921210765838623 18.31382369995117 M 2.911981821060181 19.03016662597656 C 1.047471761703491 17.16560554504395 1.732559212541673e-06 14.63681602478027 1.732559212541673e-06 12.0000057220459 L 4.971071720123291 12.0000057220459 C 4.971071720123291 13.3184061050415 5.49480152130127 14.58280658721924 6.427061557769775 15.51504611968994 L 2.911981821060181 19.03016662597656 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#9d27b0"
              transform="translate(0 -1.453)"
            >
              <path
                d="M 4.726912498474121 10.29487705230713 L 0.2531709372997284 10.29487705230713 C 0.283421128988266 9.103055953979492 0.5301631689071655 7.940614223480225 0.98777174949646 6.835856914520264 C 1.445380210876465 5.731090545654297 2.092866182327271 4.734655380249023 2.914222717285156 3.870518207550049 L 6.077632427215576 7.033927917480469 C 5.256941318511963 7.935280799865723 4.783943653106689 9.077201843261719 4.726912498474121 10.29487705230713 Z"
                stroke="none"
              />
              <path
                d="M 4.493462085723877 10.04487705230713 C 4.593138217926025 8.937466621398926 5.023218154907227 7.899160385131836 5.735792636871338 7.045628070831299 L 2.921210527420044 4.231046199798584 C 2.203313112258911 5.028281688690186 1.631651282310486 5.934672355651855 1.218741774559021 6.931527137756348 C 0.8058321475982666 7.92838191986084 0.5691462159156799 8.973518371582031 0.5130509734153748 10.04487705230713 L 4.493462085723877 10.04487705230713 M 4.971071720123291 10.54487705230713 L 1.732559212541673e-06 10.54487705230713 C 1.732559212541673e-06 7.90805721282959 1.047471761703491 5.379237174987793 2.911981821060181 3.514717102050781 L 6.427061557769775 7.029797077178955 C 5.49480152130127 7.962057113647461 4.971071720123291 9.226467132568359 4.971071720123291 10.54487705230713 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <g
              fill="#f43561"
              transform="translate(-0.603 -0.851)"
            >
              <path
                d="M 7.033927917480469 6.077632427215576 L 3.870517253875732 2.914222002029419 C 4.734647750854492 2.092865467071533 5.731090068817139 1.445380210876465 6.835846900939941 0.98777174949646 C 7.940613269805908 0.5301631689071655 9.103055953979492 0.283421128988266 10.29487705230713 0.2531709372997284 L 10.29487705230713 4.726912498474121 C 9.077201843261719 4.783943653106689 7.935280799865723 5.256941318511963 7.033927917480469 6.077632427215576 Z"
                stroke="none"
              />
              <path
                d="M 10.04487705230713 0.5130505561828613 C 8.973512649536133 0.5691461563110352 7.928371906280518 0.8058323860168457 6.931517124176025 1.218741893768311 C 5.934662818908691 1.631651401519775 5.028279304504395 2.203312873840332 4.231045722961426 2.921210527420044 L 7.045628070831299 5.735792636871338 C 7.899160385131836 5.023218154907227 8.937466621398926 4.593138217926025 10.04487705230713 4.493462562561035 L 10.04487705230713 0.5130505561828613 M 10.54487705230713 1.9073486328125e-06 L 10.54487705230713 4.971071720123291 C 9.226467132568359 4.971071720123291 7.962057113647461 5.49480152130127 7.029797077178955 6.427061557769775 L 3.514717102050781 2.911981821060181 C 5.379226684570312 1.047481536865234 7.908047199249268 1.9073486328125e-06 10.54487705230713 1.9073486328125e-06 Z"
                fill="#fff"
                stroke="none"
              />
            </g>
            <path
              className="picker"
              d="M28.492,8.854h0a2.469,2.469,0,0,0-3.49,0L23.156,10.7l-.48-.487a.677.677,0,0,0-.96.954l1.069,1.069L14.56,20.46v2.326h2.326l8.224-8.231,1.069,1.069a.677.677,0,1,0,.954-.96l-.487-.48,1.846-1.846a2.469,2.469,0,0,0,0-3.483Z"
              fill="#658098"
              transform="translate(-5.215 -13.096)"
            />
          </g>
        </svg>
      </i>
      Select Colour & Trim
    </div>
  </button>
  <span
    className="heading -black -regular"
  >
    Is this for you, or for your business?
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Personal"
      disabled={false}
      id="Personal"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Personal"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Personal"
      htmlFor="Personal"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Personal"
      >
        Personal
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-Business"
      disabled={false}
      id="Business"
      name="leaseType"
      onChange={[Function]}
      type="radio"
      value="Business"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_Business"
      htmlFor="Business"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_Business"
      >
        Business
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How many miles will you be driving a year?
    <br />
    <span
      className="text -b -regular -orange"
    >
      8000
       Miles
    </span>
  </span>
  <label
    className="sliding-input"
    data-uitestid="details-page_sliding-input_mileage-slider"
    onClick={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    style={
      Object {
        "--length": 3,
        "--value": 1,
      }
    }
  >
    <input
      className="sliding-input-control visually-hidden"
      disabled={false}
      max={3}
      min={1}
      onChange={[Function]}
      step={1}
      type="range"
      value={1}
    />
    <div
      className="sliding-input-fill"
    >
      <div
        className="sliding-input-value"
      />
    </div>
    <div
      className="sliding-input-handle"
    />
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_6K"
    >
      6K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_8K"
    >
      8K
    </div>
    <div
      className="sliding-input-step"
      data-uitestid="details-page_sliding-input_div_10K"
    >
      10K
    </div>
  </label>
  <span
    className="heading -black -regular"
  >
    How long do you want your vehicle for?
    <br />
    <span
      className="text -b -regular -orange"
    >
      24 Months - 2 Years
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-24, 36"
      disabled={false}
      id="24, 36"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="24, 36"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_24, 36"
      htmlFor="24, 36"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_24, 36"
      >
        24, 36
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-77"
      disabled={false}
      id="77"
      name="terms"
      onChange={[Function]}
      type="radio"
      value="77"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_77"
      htmlFor="77"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_77"
      >
        77
      </span>
    </label>
  </div>
  <span
    className="heading -black -regular"
  >
    How much do you want to pay upfront?
    <i
      className="icon md hydrated -ml-100 -info-modal -teal"
      onClick={[Function]}
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M256,56C145.72,56,56,145.72,56,256s89.72,200,200,200,200-89.72,200-200S366.28,56,256,56Zm0,82a26,26,0,1,1-26,26A26,26,0,0,1,256,138Zm48,226H216a16,16,0,0,1,0-32h28V244H228a16,16,0,0,1,0-32h32a16,16,0,0,1,16,16V332h28a16,16,0,0,1,0,32Z"
        />
      </svg>
    </i>
    <br />
    <span
      className="text -b -regular -orange"
    >
      1 Months - £605.95 inc. VAT
    </span>
  </span>
  <div
    className="choice-boxes-v2 button-group -solid -teal"
  >
    <input
      checked={true}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-1"
      disabled={false}
      id="1"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="1"
    />
    <label
      className="choice-box -active"
      data-uitestid="details-page_choice-boxes-v2_choice-box_1"
      htmlFor="1"
      style={
        Object {
          "backgroundColor": "null",
        }
      }
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_1"
      >
        1
      </span>
    </label>
    <input
      checked={false}
      className="choice-input visually-hidden"
      data-uitestid="details-page_choice-boxes-v2_input-3"
      disabled={false}
      id="3"
      name="upfront"
      onChange={[Function]}
      type="radio"
      value="3"
    />
    <label
      className="choice-box"
      data-uitestid="details-page_choice-boxes-v2_choice-box_3"
      htmlFor="3"
    >
      <span
        className="choice-label"
        data-uitestid="details-page_choice-boxes-v2_choice-box_span_3"
      >
        3
      </span>
    </label>
  </div>
  <span
    className="heading -flex-h -black -regular"
  >
    Vehicle Options
    <span
      className="text -b -regular -orange"
    >
      14-21 Day Delivery
    </span>
  </span>
  <div
    className="custom-select-container -fullwidth"
    data-testid="colour-selector"
    data-uitestid="details-page_custom-lease-select_colour"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Paint Colour:
      </div>
      Solid - Polar white
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <div
    className="custom-select-container -fullwidth"
    data-testid="trim-selector"
    data-uitestid="details-page_custom-lease-select_trim"
    onClick={[Function]}
  >
    <div
      className="selected-text"
    >
      <div
        className="placeholder-top"
      >
        Select Interior:
      </div>
      
    </div>
    <span
      className="icon select--chevron"
    >
      <i
        className="icon -stroke -dark"
      >
        <svg
          height="1em"
          viewBox="0 0 512 512"
          width="1em"
        >
          <polyline
            points="112 184 256 328 400 184"
            style={
              Object {
                "fill": "none",
                "stroke": "var(--class-color)",
                "strokeLinecap": "round",
                "strokeLinejoin": "round",
                "strokeWidth": 48,
              }
            }
          />
        </svg>
      </i>
    </span>
  </div>
  <span
    className="heading -black -regular"
  >
    Add Vanarama Service Plan (Our Maintenance Package):
    <span
      className="text -b -ml-100 -regular -orange"
    >
      £61.75 Per Month inc. VAT
    </span>
  </span>
  <a
    className="link -primary -small -plain"
    data-uitestid="details-page_customise-lease_what-included"
    onClick={[Function]}
  >
    See What's Included
  </a>
  <div
    className="formgroup"
  >
    <div
      className="formgroup--content"
    >
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={false}
          disabled={false}
          id="maintenanceCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="maintenanceCost"
        >
          <span
            className="text -regular -darker"
          >
            YES, I want peace of mind and to keep things hassle-free
          </span>
        </label>
      </div>
      <div
        className="radio"
      >
        <input
          className="radio--native visually-hidden"
          defaultChecked={true}
          disabled={false}
          id="leaseCost"
          name="maintenance"
          onChange={[Function]}
          type="radio"
        />
        <label
          className="radio--label"
          htmlFor="leaseCost"
        >
          <span
            className="text -regular -darker"
          >
            NO, I want to worry about sorting the maintenance costs myself
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="button-wrapper"
  >
    <button
      className="button -reset -teal -regular -clear"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -teal"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M320,146s24.36-12-64-12A160,160,0,1,0,416,294"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="256 58 336 138 256 218"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
          </svg>
        </i>
        Reset Best Price
      </div>
    </button>
  </div>
  <div
    className="pdp--order-summary"
  >
    <p
      className="heading -inherit -primary -small"
    >
      ORDER SUMMARY
    </p>
    <section
      className="structured-list -compact"
    >
      <div
        className="structured-list-tbody"
      >
        <div
          className="structured-list-row orange"
          data-abtestid="product-page_structured-list_processing-fee"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-abtestid="product-page_structured-list_processing-fee-label"
            data-testid="data_id-0-Processing Fee:"
            data-uitestid="details-page_order-summary_Processing Fee:"
          >
            Processing Fee:
          </div>
          <div
            className="structured-list-td"
            data-abtestid="product-page_structured-list_processing-fee-value"
            data-testid="processingFee"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-1-Initial Payment:"
            data-uitestid="details-page_order-summary_Initial Payment:"
          >
            Initial Payment:
          </div>
          <div
            className="structured-list-td"
            data-testid="initialPayment"
          >
            £605.95 (inc. VAT)
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-2-Contract Length:"
            data-uitestid="details-page_order-summary_Contract Length:"
          >
            Contract Length:
          </div>
          <div
            className="structured-list-td"
            data-testid="contractLengthile"
          >
            24 months
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-3-Annual Mileage:"
            data-uitestid="details-page_order-summary_Annual Mileage:"
          >
            Annual Mileage:
          </div>
          <div
            className="structured-list-td"
            data-testid="annualMileage"
          >
            8000 miles
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-4-Vanarama Service Plan:"
            data-uitestid="details-page_order-summary_Vanarama Service Plan:"
          >
            Vanarama Service Plan:
          </div>
          <div
            className="structured-list-td"
            data-testid="maintenance"
          >
            No
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-5-Colour:"
            data-uitestid="details-page_order-summary_Colour:"
          >
            Colour:
          </div>
          <div
            className="structured-list-td"
            data-testid="colour"
          >
            Solid - Polar white
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-7-Stock:"
            data-uitestid="details-page_order-summary_Stock:"
          >
            Stock:
          </div>
          <div
            className="structured-list-td"
            data-testid="stock"
          >
            14-21 Day Delivery
          </div>
        </div>
        <div
          className="structured-list-row"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-8-Warranty:"
            data-uitestid="details-page_order-summary_Warranty:"
          >
            Warranty:
          </div>
          <div
            className="structured-list-td"
            data-testid="warranty"
          >
            undefined Years Manufacturer And undefined Miles
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-9-Road Tax:"
            data-uitestid="details-page_order-summary_Road Tax:"
          >
            Road Tax:
          </div>
          <div
            className="structured-list-td"
            data-testid="roadTax"
          >
            INCLUDED
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-10-Redundancy & Life Event Cover:"
            data-uitestid="details-page_order-summary_Redundancy & Life Event Cover:"
          >
            Redundancy & Life Event Cover:
          </div>
          <div
            className="structured-list-td"
            data-testid="lifeEventCover"
          >
            FREE
          </div>
        </div>
        <div
          className="structured-list-row orange"
        >
          <div
            className="structured-list-td structured-list-content--nowrap"
            data-testid="data_id-11-Delivery:"
            data-uitestid="details-page_order-summary_Delivery:"
          >
            Delivery:
          </div>
          <div
            className="structured-list-td"
            data-testid="delivery"
          >
            FREE
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    className="lease-scanner--sticky-wrap start-screen"
    style={
      Object {
        "opacity": "1",
      }
    }
  >
    <div
      className="lease-scanner"
      style={
        Object {
          "--lease-scanner-height": "6.75rem",
        }
      }
    >
      <div
        className="content-wrapper"
      >
        <div
          className="price -xlarge -black"
        >
          <div
            className="price--inner"
            data-uitestid="details-page_price_price-inner"
          >
            <span
              className="price--sub"
            >
              £
            </span>
            <span
              className="price--pounds"
              data-uitestid="details-page_price_span_pounds"
            >
              605
            </span>
            <span
              className="price--sub"
              data-uitestid="details-page_price_span_sub"
            >
              .
              95
            </span>
          </div>
        </div>
        <div
          className="heading headingText -pt-100 -darker -small"
          data-uitestid="details-page_button_PM inc. VAT"
        >
          PM inc. VAT
        </div>
      </div>
      <div
        className="button-wrapper"
      >
        <button
          className="button -fullwidth -teal -regular -solid"
          data-uitestid="details-page_button_order-now"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "null",
            }
          }
        >
          <div
            className="button--inner"
          >
            Order Now
          </div>
        </button>
        <div
          className="-eta"
        >
          <i
            className="icon -orange -small"
          >
            <svg
              height="1em"
              viewBox="0 0 17.02 15.75"
              width="1em"
            >
              <path
                d="M14.68,4.26c-1.1-1.11-2.57-1.78-4.13-1.89V1.32h0.78c0.26,0,0.48-0.22,0.48-0.48 c0-0.26-0.21-0.48-0.48-0.48H8.81c-0.26,0-0.48,0.22-0.48,0.48c0,0.26,0.21,0.48,0.48,0.48h0.78v1.05 C8.3,2.46,7.07,2.94,6.06,3.74C5.73,4,5.42,4.28,5.15,4.6C4.98,4.8,5.01,5.11,5.22,5.27c0.2,0.16,0.49,0.14,0.66-0.05 c0.23-0.27,0.49-0.52,0.78-0.74c0.97-0.77,2.18-1.19,3.42-1.18c3.07,0,5.56,2.49,5.56,5.56c0,3.07-2.49,5.56-5.56,5.56 c-2.26,0-4.29-1.37-5.14-3.45c-0.1-0.24-0.38-0.36-0.62-0.26s-0.36,0.38-0.26,0.62c1.36,3.33,5.17,4.93,8.5,3.56 c3.33-1.36,4.93-5.17,3.56-8.5C15.77,5.6,15.29,4.87,14.68,4.26L14.68,4.26z"
              />
              <path
                d="M6.98,6.07c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H0.89c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,6.55,6.98,6.33,6.98,6.07L6.98,6.07z"
              />
              <path
                d="M6.98,8.02c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H1.65c-0.26,0-0.48,0.21-0.48,0.48 c0,0.26,0.21,0.48,0.48,0.48H6.5C6.76,8.5,6.98,8.28,6.98,8.02L6.98,8.02z"
              />
              <path
                d="M6.98,9.97c0-0.26-0.21-0.48-0.48-0.48c0,0,0,0,0,0H2.59c-0.26,0-0.48,0.21-0.48,0.48 s0.21,0.48,0.48,0.48H6.5C6.76,10.45,6.98,10.24,6.98,9.97L6.98,9.97z"
              />
              <path
                d="M13.47,6.86c0.22-0.2,0.24-0.54,0.05-0.76s-0.54-0.24-0.76-0.05c-0.01,0.01-0.02,0.02-0.03,0.02 L9.82,8.81l-0.86-0.9C8.75,7.7,8.41,7.7,8.2,7.91c-0.21,0.2-0.21,0.54-0.01,0.75l1.6,1.67L13.47,6.86z"
              />
            </svg>
          </i>
          <span
            className="text -small -orange"
          >
            In Under 3 Minutes
          </span>
        </div>
      </div>
      <div />
      <div
        style={
          Object {
            "height": "1rem",
          }
        }
      >
        <div
          className="text -small -darker"
        >
          <a
            className="link InfinityNumber clickable -primary -small -plain"
            href="tel:+441442838195"
          >
            Call 01442 838 195
          </a>
           
          |
           
          <a
            className="link -primary -small -plain"
            onClick={[Function]}
          >
            Request a Call Back
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
